--- a/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/index.html
+++ b/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ActiveASSIST</title>
-  <base href="/ActiveAssistClient/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
